# Umbra

./: .gitignore
Backend/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 001_initial_schema.py  002_email_auth_and_subscriptions.py
Backend/app/: config.py  database.py  dependencies.py  main.py
Backend/app/middleware/: error_handler.py  rate_limit.py
Backend/app/models/: __init__.py  base.py  device.py  friendship.py  group.py  group_member.py  integration.py  project.py  session.py  session_event.py  social_event.py  subscription.py  task.py  user.py  webhook.py
Backend/app/routers/: auth.py  blocklist.py  devices.py  insights.py  integrations.py  parsing.py  projects.py  sessions.py  social.py  stats.py  subscriptions.py  tasks.py  webhooks.py
Backend/app/schemas/: auth.py  device.py  insights.py  integration.py  project.py  session.py  social.py  stats.py  subscription.py  task.py  webhook.py
Backend/app/services/: ai_coaching_service.py  auth_service.py  email_service.py  insights_service.py  notification_service.py  session_service.py  slack_service.py  (+7 more)
Backend/deploy/: main.tf  terraform.tfvars.example  variables.tf
Backend/tests/: conftest.py  test_ai_coaching.py  test_auth.py  test_email_auth.py  test_health.py  test_insights.py  test_integrations.py  test_notifications.py  test_parsing.py  test_projects.py  test_sessions.py  test_social.py  test_stats.py  test_subscriptions.py  test_tasks.py  test_webhooks.py
(+206 files in other folders)
